complete send txt message and change executor task